--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -298,11 +298,11 @@
   display: none;
 }*/
 
-#menu1 .weekend-earnings {
+#menu1 .earnings-release {
   display: none;
 }
 
-#menu2 .weekend-earnings {
+#menu2 .earnings-release {
   display: none;
 }
 
