--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -31,7 +31,7 @@
     </div>
     <div id="menu1" class="tab-pane fade">
       <div id="watched-list">
-        <movie-list movies="ctrl.user.watched" user="ctrl.user" />
+        <movie-list movies="ctrl.user.watched" user="ctrl.user" handle-title-click="ctrl.handleTitleClick"/>
       </div>
     </div>
     <div id="menu2" class="tab-pane fade">
