--- a/public/client/templates/recList.html
+++ b/public/client/templates/recList.html
@@ -3,5 +3,6 @@
   ng-repeat="movie in ctrl.movies track by $index"
   movie="movie"
   user="ctrl.user"
+  handle-title-click="ctrl.handleTitleClick"
   />
 </div>
