--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -21,7 +21,7 @@
     <div class="movie-critic-info">
       <div class="critic-element">
         <a ng-href="http://www.imdb.com/title/{{ctrl.movie.imdb_id}}">
-          <img id="imdb-icon" src="http://icons.iconarchive.com/icons/icons8/windows-8/512/Cinema-Imdb-icon.png">
+          <img id="imdb-icon" src="http://ia.media-imdb.com/images/M/MV5BMTk3ODA4Mjc0NF5BMl5BcG5nXkFtZTgwNDc1MzQ2OTE@._V1_.png">
         </a>
         {{ctrl.movie.details.Ratings_Obj["Internet Movie Database"]}}
       </div>
