--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -21,6 +21,8 @@
     <li><a data-toggle="tab" href="#menu4" onclick="return false;">Upcoming</a></li>
     <!-- VIDEO PLAYER NEEDS TO BE MOVED INTO MOVIE DETAILS VIEW  -->
     <li><a data-toggle="tab" href="#menu5" onclick="return false;">VIDEO PLAYER</a></li>
+    <li><a data-toggle="tab" href="#menu6" onclick="return false;">Reviews</a></li>
+
   </ul>
 
   <div class="tab-content">
@@ -47,6 +49,9 @@
     </div>
     <div id="menu5" class="tab-pane fade">
       <video-player video="ctrl.video"/>
+    </div>
+    <div id="menu6" class="tab-pane fade">
+      <reviews />
     </div>
   </div>
 </div>
