--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -113,7 +113,7 @@
 
 .dropdown-content {
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #444;
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -366,6 +366,8 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: #222;
+    color: #fff;
 }
 
 html {
