--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -54,7 +54,7 @@ a:hover {
 #logout-button {
   margin-top: 30px;
   float: right;
-  background-color: grey;
+  /*background-color: grey;*/
   display: inline-block;
 }
 
