--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -2,7 +2,7 @@
   <div class="welcome-container">
     <div id="logout-button">
       <form action="/logout" method="get">
-        <button class="ugly-button" type="submit">Sign Out</button>
+        <button class="btn" type="submit">Sign Out</button>
       </form>
     </div>
     <h3 class="user-welcome-message">Welcome {{ctrl.user.username}}!</h3>
