gets started on reviews

--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -383,3 +383,10 @@ html {
     padding: 0;
     height: 100%;
 }
+
+.review-entry {
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+}
