--- a/public/client/templates/reviewEntry.html
+++ b/public/client/templates/reviewEntry.html
@@ -1,11 +1,13 @@
 <div class='review-entry'>
-  <div style='margin-left: 70px;'>{{ctrl.review.user}}'s review from {{ctrl.review.date}}: </div>
-  <!-- <div style="display: inline-block"> -->
+  <div style='margin-left: 70px;'>
+    <span>{{ctrl.review.user}}'s review </span>
+    <span> {{ctrl.timeStatement}} </span>
+    <span>rating: {{ctrl.review.rating}}</span>
+  </div>
   <div style="margin: 0px; position: relative; width: 50px; overflow: hidden; float: left;">
-    <button><span class="glyphicon glyphicon-thumbs-up"></span></button>
+    <button class="btn"><span class="glyphicon glyphicon-thumbs-up"></span></button>
     <div style="margin-left: 8px; font-size: 20px">{{ctrl.review.score}}</div>
-    <button><span class="glyphicon glyphicon-thumbs-down"></span></button>
+    <button class="btn"><span class="glyphicon glyphicon-thumbs-down"></span></button>
   </div>
   <div style="margin-left: 70px; overflow: hidden; position: relative; width: 50%; ">{{ctrl.text}}<br /><a ng-click='ctrl.toggleTextLength()'>{{ctrl.showMoreLessText}}</a></div>
 </div>
-<!-- </div> -->
