makes server requests for review from browser

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -51,7 +51,7 @@
       <video-player video="ctrl.video"/>
     </div>
     <div id="menu6" class="tab-pane fade">
-      <reviews />
+      <reviews user="ctrl.user"/>
     </div>
   </div>
 </div>
