--- a/public/client/templates/reviewEntry.html
+++ b/public/client/templates/reviewEntry.html
@@ -5,9 +5,9 @@
     <span>rating: {{ctrl.review.rating}}</span>
   </div>
   <div style="margin: 0px; position: relative; width: 50px; overflow: hidden; float: left;">
-    <button class="btn"><span class="glyphicon glyphicon-thumbs-up"></span></button>
+    <button ng-click='ctrl.downVote()' class="btn"><span class="glyphicon glyphicon-thumbs-up"></span></button>
     <div style="margin-left: 8px; font-size: 20px">{{ctrl.review.score}}</div>
-    <button class="btn"><span class="glyphicon glyphicon-thumbs-down"></span></button>
+    <button ng-click='ctrl.upVote()' class="btn"><span class="glyphicon glyphicon-thumbs-down"></span></button>
   </div>
-  <div style="margin-left: 70px; overflow: hidden; position: relative; width: 50%; ">{{ctrl.text}}<br /><a ng-click='ctrl.toggleTextLength()'>{{ctrl.showMoreLessText}}</a></div>
+  <div style="margin-left: 70px; margin-bottom: 70px; overflow: hidden; position: relative; width: 50%; ">{{ctrl.text}}<br /><a ng-click='ctrl.toggleTextLength()'>{{ctrl.showMoreLessText}}</a></div>
 </div>
