--- a/public/client/templates/reviewEntry.html
+++ b/public/client/templates/reviewEntry.html
@@ -5,9 +5,9 @@
     <span>rating: {{ctrl.review.rating}}</span>
   </div>
   <div style="margin: 0px; position: relative; width: 50px; overflow: hidden; float: left;">
-    <button ng-click='ctrl.upVote();' class="btn" ng-class="{'active' : ctrl.toggleUpvote}"><span class="glyphicon glyphicon-thumbs-up"></span></button>
+    <button ng-click='ctrl.upVote();' class='btn' ng-class="{voted: ctrl.toggleUpVote}"><span class="glyphicon glyphicon-thumbs-up"></span></button>
     <div style="margin-left: 8px; font-size: 20px">{{ctrl.review.score}}</div>
-    <button ng-click='ctrl.downVote()' class="btn" ng-class="ctrl.toggleUpvote ? 'active' : ''"><span class="glyphicon glyphicon-thumbs-down"></span></button>
+    <button ng-click='ctrl.downVote()' class="btn" ng-class="{voted: ctrl.toggleDownVote}"><span class="glyphicon glyphicon-thumbs-down"></span></button>
   </div>
   <br/ >
   <div style="margin-left: 70px; overflow: hidden; position: relative; width: 50%;">{{ctrl.text}}<br /><a ng-click='ctrl.toggleTextLength()'>{{ctrl.showMoreLessText}}</a></div>
