--- a/public/client/templates/reviews.html
+++ b/public/client/templates/reviews.html
@@ -36,4 +36,4 @@
 </form>
 </div>
 <h1>Reviews: </h1>
-<review-entry ng-repeat='review in ctrl.reviews' index='$index' review='review'/>
+<review-entry ng-repeat='review in ctrl.reviews' index='$index' user='ctrl.user' review='review'/>
