Progress on detail view

--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -402,6 +402,16 @@ button {
   display: none
 }
 
+/****** modals *******/
+
+.modal-content {
+  background-color: #444;
+  color: inherit;
+}
+
+.modal-body {
+  background-color: inherit;
+}
 /***************/
 
 .inline-block {
