--- a/public/client/templates/movieDetails.html
+++ b/public/client/templates/movieDetails.html
@@ -1,5 +1,4 @@
 <div class="movie-entry">
-  <h1>yaosnfdlk</h1>
 
   <img class="movie-entry-poster" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.movie.details.Poster}}">
 
@@ -72,5 +71,87 @@
       <span>remove Favorite</span>
     </button>
   </div>
+  <p>name: {{ctrl.details.dvd}}</p>
+  <video-player video="ctrl.video"/>
+  <reviews />
 
 </div>
+
+<!-- Actors
+:
+"Owen Wilson, Cristela Alonzo, Chris Cooper, Nathan Fillion"
+Awards
+:
+"N/A"
+BoxOffice
+:
+"N/A"
+Country
+:
+"USA"
+DVD
+:
+"N/A"
+Director
+:
+"Brian Fee"
+Genre
+:
+"Animation, Adventure, Comedy"
+Language
+:
+"English"
+Metascore
+:
+"59"
+Plot
+:
+"Lightning McQueen sets out to prove to a new generation of racers that he's still the best race car in the world."
+Poster
+:
+"https://images-na.ssl-images-amazon.com/images/M/MV5BMTc0NzU2OTYyN15BMl5BanBnXkFtZTgwMTkwOTg2MTI@._V1_SX300.jpg"
+Production
+:
+"Walt Disney Pictures"
+Rated
+:
+"G"
+Ratings
+:
+Array(3)
+Ratings_Obj
+:
+Object
+Released
+:
+"16 Jun 2017"
+Response
+:
+"True"
+Runtime
+:
+"109 min"
+Title
+:
+"Cars 3"
+Type
+:
+"movie"
+Website
+:
+"http://movies.disney.com/cars-3"
+Writer
+:
+"Brian Fee (original story by), Ben Queen (original story by), Eyal Podell (original story by), Jonathon E. Stewart (original story by), Kiel Murray (screenplay), Bob Peterson (screenplay), Mike Rich (screenplay)"
+Year
+:
+"2017"
+imdbID
+:
+"tt3606752"
+imdbRating
+:
+"7.3"
+imdbVotes
+:
+"5,359" -->
