--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -2,7 +2,7 @@
   <div class="welcome-container">
     <div id="logout-button">
       <form action="/logout" method="get">
-        <button class="btn" type="submit">Sign Out</button>
+        <button class="btn" type="submit" style="line-height: 1; vertical-align: inherit">Sign Out</button>
       </form>
     </div>
     <h3 class="user-welcome-message">Welcome {{ctrl.user.username}}!</h3>
@@ -54,4 +54,6 @@
       <reviews user="ctrl.user"/>
     </div>
   </div>
+
+  <movie-details video="ctrl.video" movie="ctrl.details"/>
 </div>
