completes full stack reviews

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -55,5 +55,5 @@
     </div>
   </div>
 
-  <movie-details video="ctrl.video" movie="ctrl.details"/>
+  <!-- <movie-details video="ctrl.video" movie="ctrl.details"/> -->
 </div>
