--- a/public/client/templates/upcomingList.html
+++ b/public/client/templates/upcomingList.html
@@ -3,5 +3,6 @@
   ng-repeat="movie in ctrl.movies"
   movie="movie"
   handle-title-click="ctrl.handleTitleClick"
+  video="ctrl.video"
   />
 </div>
