--- a/public/client/templates/movieList.html
+++ b/public/client/templates/movieList.html
@@ -1,3 +1,3 @@
 <div>
-  <movie-entry ng-repeat="movie in ctrl.movies"  movie="movie" ng-class="movie.isFavorite ? 'favorite' : 'non-favorite'" user="ctrl.user" handle-title-click="ctrl.handleTitleClick"/>
+  <movie-entry ng-repeat="movie in ctrl.movies"  movie="movie" ng-class="movie.isFavorite ? 'favorite' : 'non-favorite'" user="ctrl.user" handle-title-click="ctrl.handleTitleClick" video="ctrl.video"/>
 </div>
