--- a/public/client/templates/recEntry.html
+++ b/public/client/templates/recEntry.html
@@ -32,5 +32,22 @@
       </div>
     </div>
   </div>
-  <hr />
+
+  <!-- Modal -->
+  <div class="modal fade" id="{{ctrl.movie.imdb_id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">{{ctrl.details.Title}}</h4>
+        </div>
+        <div class="modal-body">
+          <movie-details video="ctrl.video" movie="ctrl.movie" details="ctrl.movie.details" user="ctrl.user"/>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
