--- a/public/client/templates/upcomingEntry.html
+++ b/public/client/templates/upcomingEntry.html
@@ -1,11 +1,27 @@
 <div class="movie-entry">
   <img class="movie-entry-poster upcoming-poster" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.movie.poster_path}}" ng-click="ctrl.handleTitleClick(ctrl.movie.details.Title)">
   <div class="movie-entry-info">
-    <h4 class="movie-entry-title inline-block" ng-click="ctrl.handleTitleClick(ctrl.movie.title)">{{ctrl.movie.title || 'N/A'}}</h4>
+    <h4 class="movie-entry-title inline-block" ng-click="ctrl.handleTitleClick(ctrl.movie.title)" data-toggle="modal" data-target="#{{ctrl.movie.id}}">{{ctrl.movie.title || 'N/A'}}</h4>
     <div class="movie-info">
       <div class="year movie-subhead">Release date: {{ctrl.movie.release_date}} </div>
       <p class="user-critic-comment user-critic-element">{{ctrl.movie.overview}}</p>
     </div>
   </div>
-  <hr />
+  <!-- Modal -->
+  <div class="modal fade" id="{{ctrl.movie.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">{{ctrl.details.Title}}</h4>
+        </div>
+        <div class="modal-body">
+          <movie-details video="ctrl.video" movie="ctrl.movie" details="ctrl.movie.details" user="ctrl.user"/>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
