--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -94,7 +94,7 @@
             <h4 class="modal-title" id="myModalLabel">{{ctrl.details.Title}}</h4>
           </div>
           <div class="modal-body">
-            <movie-details video="ctrl.video" movie="ctrl.movie" details="ctrl.movie.details" user="ctrl.user"/>
+            <movie-details video="ctrl.video" imdb="ctrl.movie.imdb_id" details="ctrl.movie.details" user="ctrl.user"/>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn" data-dismiss="modal">Close</button>
