--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -91,9 +91,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">{{ctrl.details.Title}}</h4>
+            <h4 class="modal-title" id="myModalLabel">{{ctrl.movie.details.Title}}</h4>
           </div>
           <div class="modal-body">
+            <p>{{ctrl.movie.details.Plot}}</p>
             <movie-details video="ctrl.video" imdb="ctrl.movie.imdb_id" details="ctrl.movie.details" user="ctrl.user"/>
           </div>
           <div class="modal-footer">
