--- a/public/client/templates/videoPlayer.html
+++ b/public/client/templates/videoPlayer.html
@@ -1,10 +1,11 @@
 <div class="video-player loading" ng-if="!ctrl.video">Please wait...</div>
 <div class="video-player" ng-if="ctrl.video">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" ng-src="{{ctrl.videoUrl()}}" allowFullScreen></iframe>
+    <img src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-if="!ctrl.video" />
+    <iframe class="embed-responsive-item" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.videoUrl()}}" allowFullScreen></iframe>
   </div>
   <div class="video-player-details">
-    <h3>{{ctrl.video.snippet.title}}</h3>
-    <div>{{ctrl.video.snippet.description}}</div>
+    <!-- <h3>{{ctrl.video.snippet.title}}</h3> -->
+    <!-- <div>{{ctrl.video.snippet.description}}</div> -->
   </div>
 </div>
