gets reviews to render for watched movie details

--- a/public/client/templates/recEntry.html
+++ b/public/client/templates/recEntry.html
@@ -34,7 +34,7 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal fade" id="{{ctrl.movie.imdb_id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <!-- <div class="modal fade" id="{{ctrl.movie.imdb_id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -50,4 +50,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
