--- a/public/client/templates/upcomingEntry.html
+++ b/public/client/templates/upcomingEntry.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="{{ctrl.movie.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <!-- <div class="modal fade" id="{{ctrl.movie.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -24,4 +24,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
