Modify handleTitleClick to pass imdbID

--- a/public/client/templates/upcomingEntry.html
+++ b/public/client/templates/upcomingEntry.html
@@ -1,7 +1,7 @@
 <div class="movie-entry">
   <img class="movie-entry-poster upcoming-poster" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.movie.poster_path}}" ng-click="ctrl.handleTitleClick(ctrl.movie.details.Title)">
   <div class="movie-entry-info">
-    <h4 class="movie-entry-title inline-block" ng-click="ctrl.handleTitleClick(ctrl.movie.title)" data-toggle="modal" data-target="#{{ctrl.movie.id}}">{{ctrl.movie.title || 'N/A'}}</h4>
+    <h4 class="movie-entry-title inline-block" ng-click="ctrl.handleTitleClick(ctrl.movie.title, ctrl.movie.id)" data-toggle="modal" data-target="#{{ctrl.movie.id}}">{{ctrl.movie.title || 'N/A'}}</h4>
     <div class="movie-info">
       <div class="year movie-subhead">Release date: {{ctrl.movie.release_date}} </div>
       <p class="user-critic-comment user-critic-element">{{ctrl.movie.overview}}</p>
