--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -26,17 +26,17 @@
   <div class="tab-content">
     <div id="menu0" class="tab-pane fade in active">
       <div id="box-office">
-        <box-office user="ctrl.user" handle-title-click="ctrl.handleTitleClick" video="ctrl.video"/>
+        <box-office user="ctrl.user" handle-title-click="ctrl.handleTitleClick" video="ctrl.video" tab="0"/>
       </div>
     </div>
     <div id="menu1" class="tab-pane fade">
       <div id="watched-list">
-        <movie-list movies="ctrl.user.watched" user="ctrl.user" handle-title-click="ctrl.handleTitleClick" video="ctrl.video"/>
+        <movie-list movies="ctrl.user.watched" user="ctrl.user" handle-title-click="ctrl.handleTitleClick" video="ctrl.video" tab="1"/>
       </div>
     </div>
     <div id="menu2" class="tab-pane fade">
       <div id="favorites-list">
-        <movie-list movies="ctrl.user.watched" user="ctrl.user" handle-title-click="ctrl.handleTitleClick" video="ctrl.video"/>
+        <movie-list movies="ctrl.user.watched" user="ctrl.user" handle-title-click="ctrl.handleTitleClick" video="ctrl.video" tab="2"/>
       </div>
     </div>
     <div id="menu3" class="tab-pane fade">
