--- a/public/client/templates/reviews.html
+++ b/public/client/templates/reviews.html
@@ -9,7 +9,7 @@
       <label > Your Review: </label>
       <br />
       <div>
-      <label >Rating: <span  id="user-rate">
+      <label >Rating: <span  id="user-rate-review">
         <select style="color: black;" class="rating-change-select" value="ctrl.rating" ng-model="ctrl.rating" name="carlist" form="carform" >
           <option value="-">-</option>
           <option value="1">1</option>
