--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -3,16 +3,11 @@
   <img class="movie-entry-poster" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.movie.details.Poster}}" ng-click="ctrl.handleTitleClick(ctrl.movie.details.Title)">
 
   <div class="movie-entry-info">
-    <h4 class="movie-entry-title inline-block" ng-click="ctrl.handleTitleClick(ctrl.movie.details.Title)" data-toggle="modal" data-target="#{{ctrl.modal_id}}">{{ctrl.movie.details.Title || 'N/A'}}</h4>
-    <span>
-      <!-- <button type="button" class="btn" data-toggle="modal" data-target="#{{ctrl.movie.imdb_id}}">
-        Details
-      </button> -->
-    </span>
+    <h4 class="movie-entry-title inline-block">{{ctrl.movie.details.Title || 'N/A'}}</h4>
     <button class="btn favorite-element comment-element" id="add-favorite-button" ng-click="ctrl.handleAddToFavorites()">
       <span>make favorite</span>
     </button>
-    <button type="button" class="btn" data-toggle="modal" data-target="#detailsModal">
+    <button type="button" class="btn" data-toggle="modal" data-target="#detailsModal" ng-click="ctrl.handleTitleClick(ctrl.movie.details.Title, ctrl.movie.details.imdbID, ctrl.movie.details)">
       details
     </button>
 
