--- a/public/client/templates/boxOffice.html
+++ b/public/client/templates/boxOffice.html
@@ -1,4 +1,4 @@
 <div>
   <h1 > Top 5 {{ctrl.weekend}} </h1>
-  <movie-entry ng-repeat="movie in ctrl.results"  ng-class="box-office" movie="movie" user="ctrl.user" tab="ctrl.tab"/>
+  <movie-entry ng-repeat="movie in ctrl.results"  ng-class="box-office" movie="movie" user="ctrl.user" tab="ctrl.tab" handle-title-click="ctrl.handleTitleClick"/>
 </div>
