does some styling

--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -55,7 +55,7 @@
           type="text"
         />
         <button class="btn comment-element" id="edit-button" ng-click="ctrl.handleAddCommentClick(); ctrl.input=''" onclick="return false">
-          <span>edit</span>
+          <span>comment</span>
         </button>
       </div>
     </div>
