--- a/public/client/templates/reviewEntry.html
+++ b/public/client/templates/reviewEntry.html
@@ -1,10 +1,11 @@
 <div class='review-entry' style="min-height: 120px; margin-bottom: 40px;">
   <div style='margin-left: 70px;'>
-    <div style="color: #ccc;">RATING: <strong>{{ctrl.review.rating}}/10</strong></div>
-    <small style="color: #ccc;">
-      submitted {{ctrl.timeStatement}} by
-      <strong style="color: #f9ac04;">{{ctrl.review.user}}</strong>
-    </small>
+    <div style="color: #ccc;"><strong style="color: #f9ac04;">{{ctrl.review.rating}}/10</strong>
+      <small style="color: #ccc;">
+        submitted {{ctrl.timeStatement}} by
+        <strong>{{ctrl.review.user}}</strong>
+      </small>
+    </div>
   </div>
   <div style="margin: 0px; position: relative; width: 50px; overflow: hidden; float: left;">
     <button ng-click='ctrl.upVote();' class='btn' ng-class="{voted: ctrl.toggleUpVote}"><span class="glyphicon glyphicon-thumbs-up"></span></button>
